--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 -e git+https://github.com/JuliaLang/JuliaDoc.git#egg=JuliaDoc
+-e git+https://github.com/cogitare-ai/cogitare.git#egg=cogitare
 sphinx_rtd_theme
 sphinx-autobuild
 nbsphinx
